# thesis-trace

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  alembic.ini  render.yaml
_bmad/: config.toml
_bmad-output/implementation-artifacts/: 1-1-project-scaffold.md  (+2 more)
backend/: pyproject.toml
backend/api/: __init__.py  deps.py  repository.py  routes.py  schemas.py
backend/app/: __init__.py  config.py  db.py  main.py  models.py
backend/canonicalization/: __init__.py  canonicalize.py  mappings.py
backend/explanation/: __init__.py  llm.py  methodology.py  template.py
backend/formulas/: __init__.py  engine.py
backend/formulas/specs/: altman_v1.yaml  beneish_v1.yaml  piotroski_v1.yaml  sloan_v1.yaml
backend/ingestion/: __init__.py  company_facts.py  edgar.py  fx.py  tiingo.py
backend/pipeline/: __init__.py  run.py  universe.py
backend/raw_store/: __init__.py  fx_rates.py  market_prices.py  repository.py
backend/scoring/: __init__.py  altman.py  beneish.py  facts.py  piotroski.py  runner.py  sloan.py
backend/tests/: conftest.py  test_altman.py  test_beneish.py  test_canonicalization.py  test_display.py  test_formula_engine.py  test_golden_dataset.py  test_health.py  test_ingestion.py  test_market_prices.py  test_models.py  test_pipeline.py  test_read_api.py  test_scoring.py  test_verdict_explanation.py
backend/tests/fixtures/: shop_company_facts.json  shop_tiingo_prices.json
backend/tests/golden/: phase1_golden.yaml
backend/validation/: __init__.py  checks.py
frontend/: .gitignore  eslint.config.mjs  package-lock.json  package.json
(+47 files in other folders)
