[project]
name = "thesistrace-backend"
version = "0.1.0"
description = "ThesisTrace backend — batch pipeline (write) + read-only query API (read)."
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.139,<0.140",
    "pydantic>=2.13,<2.14",
    "pydantic-settings>=2.6,<3",
    "sqlalchemy[asyncio]==2.0.51",
    "asyncpg>=0.30,<0.31",
    "alembic>=1.14,<2",
    "pyyaml>=6.0,<7",
    "uvicorn[standard]>=0.34,<0.35",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "httpx>=0.28,<0.29",
    "ruff>=0.8,<0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
